# generated-resource-packs-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: colour.rs  k_means.rs  lib.rs  main.rs  modrinth.rs
