[package]
name = "gen-rp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
image = { version = "0.25.6", default-features = false, features = ["png"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
walkdir = "2.5.0"
zip = "4.3.0"
